@@ -23,8 +23,8 @@ import com.consultores.optiplant.aptiplantback.repository.ProductoRepository;
 import com.consultores.optiplant.aptiplantback.repository.SucursalRepository;
 import com.consultores.optiplant.aptiplantback.repository.UsuarioRepository;
 import com.consultores.optiplant.aptiplantback.repository.VentaRepository;
+import com.consultores.optiplant.aptiplantback.util.MonedaUtils;
 import java.math.BigDecimal;
-import java.math.RoundingMode;
 import java.time.LocalDate;
 import java.time.LocalDateTime;
 import java.util.List;
@@ -48,17 +48,15 @@ public class VentaServiceImpl implements VentaService {
     private final InventarioRepository inventarioRepository;
     private final InventarioService inventarioService;
 
-    public VentaServiceImpl(
-        VentaRepository ventaRepository,
-        DetalleVentaRepository detalleVentaRepository,
-        SucursalRepository sucursalRepository,
-        UsuarioRepository usuarioRepository,
-        ListaPreciosRepository listaPreciosRepository,
-        ProductoRepository productoRepository,
-        PrecioProductoRepository precioProductoRepository,
-        InventarioRepository inventarioRepository,
-        InventarioService inventarioService
-    ) {
+    public VentaServiceImpl(VentaRepository ventaRepository,
+                            DetalleVentaRepository detalleVentaRepository,
+                            SucursalRepository sucursalRepository,
+                            UsuarioRepository usuarioRepository,
+                            ListaPreciosRepository listaPreciosRepository,
+                            ProductoRepository productoRepository,
+                            PrecioProductoRepository precioProductoRepository,
+                            InventarioRepository inventarioRepository,
+                            InventarioService inventarioService) {
         this.ventaRepository = ventaRepository;
         this.detalleVentaRepository = detalleVentaRepository;
         this.sucursalRepository = sucursalRepository;
@@ -73,69 +71,33 @@ public class VentaServiceImpl implements VentaService {
     @Override
     @Transactional(readOnly = true)
     public Page<VentaResponse> listar(int page, int size, Long sucursalId, LocalDate desde, LocalDate hasta) {
-        LocalDate fechaDesde = desde != null ? desde : LocalDate.of(1970, 1, 1);
-        LocalDate fechaHasta = hasta != null ? hasta : LocalDate.now();
-        if (fechaDesde.isAfter(fechaHasta)) {
-            throw new BusinessException("La fecha desde no puede ser mayor a la fecha hasta");
+        if (desde != null && hasta != null && desde.isAfter(hasta)) {
+            throw new BusinessException("La fecha 'desde' no puede ser posterior a 'hasta'");
         }
-
-        PageRequest pageable = PageRequest.of(
-                Math.max(0, page),
-                Math.max(1, size),
-                Sort.by(Sort.Direction.DESC, "fecha")
-        );
-
-        LocalDateTime inicio = fechaDesde.atStartOfDay();
-        LocalDateTime fin = fechaHasta.plusDays(1).atStartOfDay().minusNanos(1);
-
-        return ventaRepository.findWithFilters(sucursalId, inicio, fin, pageable)
+        PageRequest pageable = PageRequest.of(Math.max(0, page), Math.max(1, size),
+                Sort.by(Sort.Direction.DESC, "fecha"));
+        LocalDateTime desdeDateTime = desde != null ? desde.atStartOfDay() : null;
+        LocalDateTime hastaDateTime = hasta != null ? hasta.atTime(23, 59, 59) : null;
+        return ventaRepository.findWithFilters(sucursalId, desdeDateTime, hastaDateTime, pageable)
                 .map(this::toResponse);
     }
 
     @Override
     public VentaResponse crear(VentaRequest request, Long usuarioId) {
+        Sucursal sucursal = buscarSucursal(request.idSucursal());
         Usuario vendedor = buscarUsuario(usuarioId);
-        Sucursal sucursal = sucursalRepository.findById(request.idSucursal())
-                .orElseThrow(() -> new ResourceNotFoundException("Sucursal", request.idSucursal()));
+        ListaPrecios listaPrecios = request.idListaPrecios() != null
+                ? buscarListaPrecios(request.idListaPrecios()) : null;
 
-        final ListaPrecios listaPrecios;
-        if (request.idListaPrecios() != null) {
-            listaPrecios = listaPreciosRepository.findById(request.idListaPrecios())
-                    .orElseThrow(() -> new ResourceNotFoundException("ListaPrecios", request.idListaPrecios()));
-        } else {
-            listaPrecios = null;
-        }
-
+        // Guard: validar stock de todas las líneas ANTES de registrar cualquier movimiento
         validarStockParaTodasLasLineas(request.lineas(), sucursal.getId());
 
-        Venta venta = new Venta();
-        venta.setSucursal(sucursal);
-        venta.setUsuario(vendedor);
-        venta.setListaPrecios(listaPrecios);
-        venta.setFecha(LocalDateTime.now());
-        venta.setEstado(EstadoVenta.CONFIRMADA);
-        venta.setDescuentoGlobal(request.descuentoGlobal() != null ? request.descuentoGlobal() : BigDecimal.ZERO);
-
-        List<DetalleVenta> detalles = request.lineas().stream()
-                .map(linea -> crearDetalle(venta, listaPrecios, linea))
-                .toList();
-        venta.getDetalles().addAll(detalles);
-        venta.setSubtotal(calcularSubtotal(detalles));
-        venta.setTotal(aplicarDescuentoGlobal(venta.getSubtotal(), venta.getDescuentoGlobal()));
+        Venta venta = inicializarVenta(sucursal, vendedor, listaPrecios, request.descuentoGlobal());
+        BigDecimal subtotal = procesarLineas(venta, request.lineas(), sucursal.getId(), listaPrecios);
+        aplicarDescuentoGlobal(venta, subtotal);
 
         Venta guardada = ventaRepository.save(venta);
-
-        for (DetalleVenta detalle : guardada.getDetalles()) {
-            Inventario inventario = inventarioRepository.findByProductoIdAndSucursalId(detalle.getProducto().getId(), guardada.getSucursal().getId())
-                    .orElseThrow(() -> new BusinessException("No existe inventario para el producto " + detalle.getProducto().getNombre()));
-            inventarioService.registrarRetiro(
-                    inventario.getId(),
-                    TipoMovimiento.VENTA,
-                    detalle.getCantidad(),
-                    "Venta " + guardada.getId(),
-                    vendedor.getId()
-            );
-        }
+        registrarRetiros(guardada, vendedor.getId());
 
         return toResponse(guardada);
     }
@@ -143,38 +105,164 @@ public class VentaServiceImpl implements VentaService {
     @Override
     @Transactional(readOnly = true)
     public VentaResponse obtenerPorId(Long id) {
-        Venta venta = ventaRepository.findByIdWithRelaciones(id)
-                .orElseThrow(() -> new ResourceNotFoundException("Venta", id));
-        return toResponse(venta);
+        return toResponse(ventaRepository.findByIdWithRelaciones(id)
+                .orElseThrow(() -> new ResourceNotFoundException("Venta", id)));
     }
 
     @Override
     public VentaResponse anular(Long id, String motivoAnulacion) {
         Venta venta = ventaRepository.findByIdWithRelaciones(id)
                 .orElseThrow(() -> new ResourceNotFoundException("Venta", id));
+
         if (venta.getEstado() != EstadoVenta.CONFIRMADA) {
-            throw new BusinessException("Solo se pueden anular ventas confirmadas");
+            throw new BusinessException("Solo se pueden anular ventas en estado CONFIRMADA");
         }
-        if (motivoAnulacion == null || motivoAnulacion.trim().isEmpty()) {
+        if (motivoAnulacion == null || motivoAnulacion.isBlank()) {
             throw new BusinessException("El motivo de anulación es obligatorio");
         }
 
-        for (DetalleVenta detalle : detalleVentaRepository.findByVentaId(venta.getId())) {
-            Inventario inventario = inventarioRepository.findByProductoIdAndSucursalId(detalle.getProducto().getId(), venta.getSucursal().getId())
-                    .orElseThrow(() -> new BusinessException("No existe inventario para revertir la venta"));
-            inventarioService.registrarIngreso(
-                    inventario.getId(),
-                    TipoMovimiento.DEVOLUCION,
-                    detalle.getCantidad(),
-                    "Anulación venta " + venta.getId(),
-                    detalle.getPrecioUnitario(),
-                    venta.getUsuario().getId()
-            );
-        }
+        reintegrarStock(venta);
 
         venta.setEstado(EstadoVenta.ANULADA);
         venta.setMotivoAnulacion(motivoAnulacion.trim());
         return toResponse(ventaRepository.save(venta));
+    }
+
+    // --- Template Method steps ---
+
+    private void validarStockParaTodasLasLineas(List<LineaVentaRequest> lineas, Long sucursalId) {
+        for (LineaVentaRequest linea : lineas) {
+            Inventario inv = inventarioRepository
+                    .findByProductoIdAndSucursalId(linea.idProducto(), sucursalId)
+                    .orElseThrow(() -> new BusinessException(
+                            "El producto " + linea.idProducto() + " no tiene inventario en la sucursal"));
+            if (inv.getStockActual().compareTo(linea.cantidad()) < 0) {
+                throw new BusinessException(
+                        "Stock insuficiente para el producto " + linea.idProducto() +
+                        ". Disponible: " + inv.getStockActual() + ", solicitado: " + linea.cantidad());
+            }
+        }
+    }
+
+    private Venta inicializarVenta(Sucursal sucursal, Usuario usuario,
+                                    ListaPrecios listaPrecios, BigDecimal descuentoGlobal) {
+        Venta venta = new Venta();
+        venta.setSucursal(sucursal);
+        venta.setUsuario(usuario);
+        venta.setListaPrecios(listaPrecios);
+        venta.setFecha(LocalDateTime.now());
+        venta.setEstado(EstadoVenta.CONFIRMADA);
+        venta.setDescuentoGlobal(descuentoGlobal != null ? descuentoGlobal : BigDecimal.ZERO);
+        return venta;
+    }
+
+    private BigDecimal procesarLineas(Venta venta, List<LineaVentaRequest> lineas,
+                                      Long sucursalId, ListaPrecios listaPrecios) {
+        BigDecimal subtotalAcumulado = BigDecimal.ZERO;
+        for (LineaVentaRequest linea : lineas) {
+            Producto producto = productoRepository.findById(linea.idProducto())
+                    .orElseThrow(() -> new ResourceNotFoundException("Producto", linea.idProducto()));
+
+            BigDecimal precioUnitario = resolverPrecio(producto, listaPrecios, sucursalId);
+            BigDecimal descLinea = linea.descuentoLinea() != null ? linea.descuentoLinea() : BigDecimal.ZERO;
+            BigDecimal precioConDescuento = MonedaUtils.aplicarDescuento(precioUnitario, descLinea);
+            BigDecimal subtotalLinea = MonedaUtils.monetario(precioConDescuento.multiply(linea.cantidad()));
+
+            DetalleVenta detalle = new DetalleVenta();
+            detalle.setVenta(venta);
+            detalle.setProducto(producto);
+            detalle.setCantidad(linea.cantidad());
+            detalle.setPrecioUnitario(precioUnitario);
+            detalle.setDescuentoLinea(descLinea);
+            detalle.setSubtotal(subtotalLinea);
+
+            venta.getDetalles().add(detalle);
+            subtotalAcumulado = subtotalAcumulado.add(subtotalLinea);
+        }
+        return MonedaUtils.monetario(subtotalAcumulado);
+    }
+
+    private void aplicarDescuentoGlobal(Venta venta, BigDecimal subtotal) {
+        venta.setSubtotal(subtotal);
+        venta.setTotal(MonedaUtils.aplicarDescuento(subtotal, venta.getDescuentoGlobal()));
+    }
+
+    private void registrarRetiros(Venta venta, Long usuarioId) {
+        Long sucursalId = venta.getSucursal().getId();
+        for (DetalleVenta detalle : venta.getDetalles()) {
+            Inventario inv = inventarioRepository
+                    .findByProductoIdAndSucursalId(detalle.getProducto().getId(), sucursalId)
+                    .orElseThrow(() -> new BusinessException(
+                            "No existe inventario para el producto " + detalle.getProducto().getNombre()));
+            inventarioService.registrarRetiro(
+                    inv.getId(),
+                    TipoMovimiento.VENTA,
+                    detalle.getCantidad(),
+                    "Venta #" + venta.getId(),
+                    usuarioId);
+        }
+    }
+
+    private void reintegrarStock(Venta venta) {
+        // Usa el usuario original de la venta como responsable del movimiento de devolución
+        Long usuarioId = venta.getUsuario().getId();
+        Long sucursalId = venta.getSucursal().getId();
+        for (DetalleVenta detalle : detalleVentaRepository.findByVentaId(venta.getId())) {
+            Inventario inv = inventarioRepository
+                    .findByProductoIdAndSucursalId(detalle.getProducto().getId(), sucursalId)
+                    .orElseThrow(() -> new BusinessException(
+                            "No existe inventario para revertir la venta"));
+            inventarioService.registrarIngreso(
+                    inv.getId(),
+                    TipoMovimiento.DEVOLUCION,
+                    detalle.getCantidad(),
+                    "Anulación venta #" + venta.getId(),
+                    detalle.getPrecioUnitario(),
+                    usuarioId);
+        }
+    }
+
+    // --- Resolución de precio ---
+
+    private BigDecimal resolverPrecio(Producto producto, ListaPrecios lista, Long sucursalId) {
+        if (lista != null) {
+            return precioDesdeListaVigente(producto, lista);
+        }
+        // Sin lista de precios: usa el CPP del inventario en esa sucursal como precio base
+        return inventarioRepository
+                .findByProductoIdAndSucursalId(producto.getId(), sucursalId)
+                .map(Inventario::getCostoPromedioPonderado)
+                .filter(cpp -> cpp.compareTo(BigDecimal.ZERO) > 0)
+                .orElseThrow(() -> new BusinessException(
+                        "No hay precio disponible para '" + producto.getNombre() +
+                        "'. Configure una lista de precios o registre compras para establecer el CPP."));
+    }
+
+    private BigDecimal precioDesdeListaVigente(Producto producto, ListaPrecios lista) {
+        LocalDate hoy = LocalDate.now();
+        // Primero busca precio con rango de fechas vigente
+        List<PrecioProducto> vigentes = precioProductoRepository
+                .findByListaIdAndProductoIdAndFechaInicioLessThanEqualAndFechaFinGreaterThanEqual(
+                        lista.getId(), producto.getId(), hoy, hoy);
+        if (!vigentes.isEmpty()) {
+            return vigentes.get(0).getPrecio();
+        }
+        // Fallback: precio sin restricción de fechas en la misma lista
+        List<PrecioProducto> sinFecha = precioProductoRepository
+                .findByListaIdAndProductoId(lista.getId(), producto.getId());
+        if (!sinFecha.isEmpty()) {
+            return sinFecha.get(0).getPrecio();
+        }
+        throw new BusinessException(
+                "No hay precio configurado para '" + producto.getNombre() +
+                "' en la lista de precios '" + lista.getNombre() + "'");
+    }
+
+    // --- Helpers de carga ---
+
+    private Sucursal buscarSucursal(Long id) {
+        return sucursalRepository.findById(id)
+                .orElseThrow(() -> new ResourceNotFoundException("Sucursal", id));
     }
 
     private Usuario buscarUsuario(Long id) {
@@ -182,64 +270,9 @@ public class VentaServiceImpl implements VentaService {
                 .orElseThrow(() -> new ResourceNotFoundException("Usuario", id));
     }
 
-    private void validarStockParaTodasLasLineas(List<LineaVentaRequest> lineas, Long sucursalId) {
-        for (LineaVentaRequest linea : lineas) {
-            Inventario inventario = inventarioRepository.findByProductoIdAndSucursalId(linea.idProducto(), sucursalId)
-                    .orElseThrow(() -> new BusinessException("No existe inventario para el producto " + linea.idProducto()));
-            if (inventario.getStockActual().compareTo(linea.cantidad()) < 0) {
-                throw new BusinessException("Stock insuficiente para el producto " + linea.idProducto());
-            }
-        }
-    }
-
-    private DetalleVenta crearDetalle(Venta venta, ListaPrecios listaPrecios, LineaVentaRequest linea) {
-        Producto producto = productoRepository.findById(linea.idProducto())
-                .orElseThrow(() -> new ResourceNotFoundException("Producto", linea.idProducto()));
-
-        BigDecimal precioBase = obtenerPrecio(producto.getId(), listaPrecios);
-        BigDecimal descuentoLinea = linea.descuentoLinea() != null ? linea.descuentoLinea() : BigDecimal.ZERO;
-        BigDecimal subtotal = precioBase.multiply(linea.cantidad())
-                .multiply(BigDecimal.ONE.subtract(descuentoLinea.divide(BigDecimal.valueOf(100), 4, RoundingMode.HALF_UP)))
-                .setScale(2, RoundingMode.HALF_UP);
-
-        DetalleVenta detalle = new DetalleVenta();
-        detalle.setVenta(venta);
-        detalle.setProducto(producto);
-        detalle.setCantidad(linea.cantidad());
-        detalle.setPrecioUnitario(precioBase);
-        detalle.setDescuentoLinea(descuentoLinea);
-        detalle.setSubtotal(subtotal);
-        return detalle;
-    }
-
-    private BigDecimal obtenerPrecio(Long productoId, ListaPrecios listaPrecios) {
-        if (listaPrecios == null) {
-            Inventario inventario = inventarioRepository.findAll().stream()
-                    .filter(i -> i.getProducto().getId().equals(productoId))
-                    .findFirst()
-                    .orElseThrow(() -> new BusinessException("No existe inventario para determinar el precio base"));
-            return inventario.getCostoPromedioPonderado();
-        }
-
-        List<PrecioProducto> precios = precioProductoRepository.findByListaIdAndProductoId(listaPrecios.getId(), productoId);
-        if (precios.isEmpty()) {
-            throw new BusinessException("No existe precio para el producto en la lista seleccionada");
-        }
-
-        return precios.get(0).getPrecio();
-    }
-
-    private BigDecimal calcularSubtotal(List<DetalleVenta> detalles) {
-        return detalles.stream()
-                .map(DetalleVenta::getSubtotal)
-                .reduce(BigDecimal.ZERO, BigDecimal::add)
-                .setScale(2, RoundingMode.HALF_UP);
-    }
-
-    private BigDecimal aplicarDescuentoGlobal(BigDecimal subtotal, BigDecimal descuentoGlobal) {
-        BigDecimal descuento = descuentoGlobal != null ? descuentoGlobal : BigDecimal.ZERO;
-        return subtotal.multiply(BigDecimal.ONE.subtract(descuento.divide(BigDecimal.valueOf(100), 4, RoundingMode.HALF_UP)))
-                .setScale(2, RoundingMode.HALF_UP);
+    private ListaPrecios buscarListaPrecios(Long id) {
+        return listaPreciosRepository.findById(id)
+                .orElseThrow(() -> new ResourceNotFoundException("Lista de precios", id));
     }
 
     private VentaResponse toResponse(Venta venta) {
@@ -253,7 +286,6 @@ public class VentaServiceImpl implements VentaService {
                 venta.getDescuentoGlobal(),
                 venta.getTotal(),
                 venta.getEstado(),
-                venta.getMotivoAnulacion()
-        );
+                venta.getMotivoAnulacion());
     }
 }
